Fix calculation span spacing issue

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html, body {
 
 #calculation-span {
   width: 233px;
+  letter-spacing: 3px;
   overflow-x: auto;
 }
 
